Display error message for DRAFT and fix spacing in FormViewer

--- a/frontend/main-app/src/components/FormViewer/FormViewer.module.css
+++ b/frontend/main-app/src/components/FormViewer/FormViewer.module.css
@@ -11,9 +11,9 @@
 .buttonContainer {
   display: flex;
   justify-content: end;
-  padding: var(--fds-spacing-5) 0;
+  padding-top: var(--fds-spacing-5);
 }
 
-.component div {
-  margin-bottom: var(--fds-spacing-4);
+.component {
+  margin: var(--fds-spacing-10) 0;
 }
